MSGED TE (TOBI'S EDITION) 6.0 - DOCUMENTATION OF NEW FEATURES AND CHANGES
=========================================================================

Features, Changes and Fixes in Msged TE 6.0.1
---------------------------------------------

Fixes:

- In template text in forwarded and redirected messages, the areatag was
  filled in incorrectly if the area grouping feature (group separators
  etc.) was used.

- Fixed redraw problems with buttons in dialog boxes.

- The binary versions of Msged TE 6.0.1 are linked against Smapi 2.0.1,
  which brings quite some improvements in JAM access.


Features, Changes and Fixes in Msged TE 6.0.0
---------------------------------------------

Changes:

- The default value of the "Gate" keyword is now "ASK" (see also features).

- Brought Msged/TE in line with FSP 1013 (resp. Charset Kludges). Msged now
  uses and understands the new-style CPxxx CHRS kludges instead of the
  obsolete "IBMPC" charset kludge. In order to be compatible with other
  readers, you should definitely add the following line to your config file:
     CharsetAlias IBMPC CPxxx
  where xxx should be the codepage that is used most frequently in your
  country (850 for Western Europe, 437 for America, 866 for Russia).
  If you want to use the new style CPxx CHRS kludges for output, you must
  also change your OutputCharset statement like
     OutputCharset CPxxx
  but be aware of the fact that, except for perhaps Russian setups, most
  readers do not yet understand the "CPxxx" charset kludge.  If you stick
  with the old "OutputCharset IBMPC" method, Msged will emit an
  additional "@CODEPAGE" kludge to denote the codepage that you are using.

  Please also make sure that you are using the correct translation
  tables. If you are using a binary release, choose one pair of
  readmaps.xxx/writmaps.xxx files (the manual, section "advanced topics",
  subsection "special characters / fsc 0054") aids you in selecting the right